# HydrogenFactory

./: .gitignore  README.md  config.json  pyproject.toml
src/hydrogen_factory/: main.py
src/hydrogen_factory/api/: router.py
src/hydrogen_factory/api/endpoints/: electrolyzer.py  schedule.py  storage.py
src/hydrogen_factory/core/: config.py  exceptions.py
src/hydrogen_factory/models/: electrolyzer.py  power_supply.py  schedule.py  storage.py
src/hydrogen_factory/services/: electrolyzer_service.py  optimization_service.py  storage_service.py
tests/: conftest.py
tests/test_api/: test_electrolyzer.py  test_schedule.py  test_storage.py
tests/test_services/: test_electrolyzer_service.py  test_optimization_service.py  test_storage_service.py
